--- a/net-dialup/freeradius/ChangeLog
+++ b/net-dialup/freeradius/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for net-dialup/freeradius
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.108 2012/10/03 10:29:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.109 2012/10/04 04:02:34 flameeyes Exp $
+
+  04 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  -files/freeradius-2.1.10-pkglibdir.patch,
+  -files/freeradius-2.1.10-qafixes.patch, -files/freeradius-2.1.10-ssl.patch,
+  -files/freeradius-2.1.10-versionless-la-files.patch,
+  -files/freeradius-2.1.12-pkglibdir.patch,
+  -files/freeradius-2.1.12-qafixes.patch, -files/freeradius-2.1.12-ssl.patch,
+  -files/freeradius-2.1.12-versionless-la-files.patch, -files/radius.conf,
+  -files/radius.init-r1, -files/radius.init-r2, -freeradius-2.1.11-r1.ebuild,
+  -freeradius-2.1.12.ebuild, metadata.xml:
+  Remove old, vulnerable versions.
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> freeradius-2.2.0.ebuild:
   Stable for amd64, wrt bug #434802
