--- a/dev-libs/libchewing/ChangeLog
+++ b/dev-libs/libchewing/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libchewing
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libchewing/ChangeLog,v 1.27 2012/10/02 03:01:52 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libchewing/ChangeLog,v 1.28 2012/10/04 22:35:30 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> +files/0.3.3-strncat-fix.patch,
+  libchewing-0.3.3.ebuild:
+  Patch strncat() to avoid buffer overflow. #434418
 
   02 Oct 2012;  <naota@gentoo.org> -libchewing-0.3.2-r1.ebuild,
   -libchewing-0.3.2.ebuild:
