--- a/x11-libs/pango/ChangeLog
+++ b/x11-libs/pango/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/pango
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.355 2012/10/06 09:07:29 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.356 2012/10/06 21:19:21 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> pango-1.30.1.ebuild:
+  stable ppc ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> pango-1.30.1.ebuild:
   arm stable, bug #427544
