--- a/net-print/cups-pk-helper/ChangeLog
+++ b/net-print/cups-pk-helper/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-print/cups-pk-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.14 2012/10/06 09:52:38 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.15 2012/10/16 02:23:00 tetromino Exp $
+
+*cups-pk-helper-0.2.4 (16 Oct 2012)
+
+  16 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  -cups-pk-helper-0.2.1.ebuild, cups-pk-helper-0.2.2.ebuild,
+  +cups-pk-helper-0.2.4.ebuild:
+  Version bump; fixes a security flaw that allowed users to overwrite system
+  files (bug #438450, CVE-2012-4510). Update license. Drop old.
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> cups-pk-helper-0.2.2.ebuild:
   arm stable, bug #427544
