--- a/sci-biology/shrimp/ChangeLog
+++ b/sci-biology/shrimp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/shrimp
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/shrimp/ChangeLog,v 1.14 2011/03/07 15:33:02 tomka Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/shrimp/ChangeLog,v 1.15 2012/10/18 18:00:44 jlec Exp $
+
+  18 Oct 2012; Justin Lecher <jlec@gentoo.org> -shrimp-1.3.1.ebuild,
+  shrimp-2.0.1.ebuild, shrimp-2.1.0.ebuild:
+  Do not install elf in usr/share, #438652
 
   07 Mar 2011; Thomas Kahle <tomka@gentoo.org> shrimp-2.0.1.ebuild:
   x86 stable per bug 353563
