--- a/sci-biology/shrimp/ChangeLog
+++ b/sci-biology/shrimp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/shrimp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/shrimp/ChangeLog,v 1.15 2012/10/18 18:00:44 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/shrimp/ChangeLog,v 1.16 2012/10/18 18:17:38 jlec Exp $
+
+*shrimp-2.2.3 (18 Oct 2012)
+
+  18 Oct 2012; Justin Lecher <jlec@gentoo.org> +shrimp-2.2.3.ebuild:
+  Vesion Bump
 
   18 Oct 2012; Justin Lecher <jlec@gentoo.org> -shrimp-1.3.1.ebuild,
   shrimp-2.0.1.ebuild, shrimp-2.1.0.ebuild:
