--- a/mail-mta/exim/ChangeLog
+++ b/mail-mta/exim/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/exim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.230 2012/10/20 16:29:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.231 2012/10/26 09:04:34 grobian Exp $
+
+*exim-4.80.1 (26 Oct 2012)
+
+  26 Oct 2012; Fabian Groffen <grobian@gentoo.org> +exim-4.80.1.ebuild:
+  Bump to 4.80.1 for DKIM security CVE-2012-5671.  Fixed use of AR and RANLIB,
+  bug #438326
 
   20 Oct 2012; Raúl Porcel <armin76@gentoo.org> exim-4.80.ebuild:
   alpha/ia64/sparc/x86 stable wrt #437746
